updated css file

--- a/feedback.html
+++ b/feedback.html
@@ -24,7 +24,7 @@
   <main class="container">
     <form role="form" action="#" id='quiz-form'>
       <input type="button" class="feedback-btn" value="Your Answer Was Correct!">
-      <button class="start-quiz-btn" type="button" role="button" autofocus>Next</button>
+      <button class="next-btn" type="button" role="dialog" autofocus>Next</button>
     </form>
   </main>
 
