finished all four pages now

--- a/question.html
+++ b/question.html
@@ -25,9 +25,9 @@
 
     <section class="question-section">
       <form role="form" action="#" id='quiz-form'>
-              <h2 class='question'>
-                How Big is Texas Really?
-              </h2>
+        <h2 class='question'>
+          How Big is Texas Really?
+        </h2>
         <fieldset>
           <label class="answer-option">
             <input type="radio" name="answer" value='Not So Big' class="question-btn">
@@ -41,7 +41,7 @@
             <input type="radio" name="answer" value='Pretty Big' class="question-btn">
             <span class="answerOptionText">
               Pretty Big
-            </span> 
+            </span>
           </label>
         </fieldset>
         <fieldset>
@@ -49,6 +49,14 @@
             <input type="radio" name="answer" value='Really Big' class="question-btn">
             <span class="answerOptionText">
               Really Big
+            </span>
+          </label>
+        </fieldset>
+        <fieldset>
+          <label class="answer-option">
+            <input type="radio" name="answer" value='Not So Big' class="question-btn">
+            <span class="answerOptionText">
+              Smaller Than California
             </span>
           </label>
         </fieldset>
