--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Quiz Me Not!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
-    <link rel="stylesheet" href="index.css">
-  </head>
 
-  <body lang='en'>
+<head>
+  <title>Quiz Me Not!</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+  <link rel="stylesheet" href="index.css">
+</head>
 
-    <section class='top-section'role ='banner'>
-      <header class='container' role="marquee">
-        <a href="#">
-          <input id='logo' type="image" role='button' src='images\texas-flag-logo.png'>
-        </a>
-        <h1 id='banner-name'>Quiz About Texas!</h1>
-        <span class="questionNum">Question 1 of 100</span>
-        <span class="score" role="log">25</span>
-        <span class='points'>Points!</span>
-      </header>
-    </section>
+<body lang='en'>
 
-    <main class="container">
-       <form role="form" action="#" id='quiz-form'>
-<button class="start-quiz-btn " type="button" role="button" autofocus>Let's Do This!</button>
-       </form>
-    </main>
+  <section class='top-section' role='banner'>
+    <header class='container' role="marquee">
+      <a href="#">
+        <input id='logo' type="image" role='button' src='images\texas-flag-logo.png'>
+      </a>
+      <h1 id='banner-name'>Quiz About Texas!</h1>
+      <span class="questionNum">Question <span class="question-num-span">0</span> / 5</span>
+      <span class="score" role="log">0 Points</span>
+    </header>
+  </section>
 
-  </body>
+  <main>
+    <div class="app-container">
+      <button class="start-quiz-btn replaceable" type="button" role="button" autofocus>Let's Do This!</button>
+    </div>
+  </main>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="htmlVars.js"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
+
+
+<!-- <form role="form" action="#" id='quiz-form'>
+  <button class="start-quiz-btn " type="button" role="button" autofocus>Let's Do This!</button>
+</form> -->
