pushing product for grade submission

--- a/question.html
+++ b/question.html
@@ -30,7 +30,7 @@
         </h2>
         <fieldset>
           <label class="answer-option">
-            <input type="radio" name="answer" value='Not So Big' class="question-btn">
+            <input required type="radio" name="answer" value='Not So Big' class="question-btn">
             <span class="answerOptionText">
               Not So Big
             </span>
@@ -38,7 +38,7 @@
         </fieldset>
         <fieldset>
           <label class="answer-option">
-            <input type="radio" name="answer" value='Pretty Big' class="question-btn">
+            <input required type="radio" name="answer" value='Pretty Big' class="question-btn">
             <span class="answerOptionText">
               Pretty Big
             </span>
@@ -46,7 +46,7 @@
         </fieldset>
         <fieldset>
           <label class="answer-option">
-            <input type="radio" name="answer" value='Really Big' class="question-btn">
+            <input required type="radio" name="answer" value='Really Big' class="question-btn">
             <span class="answerOptionText">
               Really Big
             </span>
@@ -54,7 +54,7 @@
         </fieldset>
         <fieldset>
           <label class="answer-option">
-            <input type="radio" name="answer" value='Not So Big' class="question-btn">
+            <input required type="radio" name="answer" value='Not So Big' class="question-btn">
             <span class="answerOptionText">
               Smaller Than California
             </span>
