--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
   </section>
 
   <main>
+    <h1 class='start-question'>Want to Test Your Knowledge of the Lone Star State?</h1>
     <div class="app-container">
+      <header>
+        
+      </header>
       <button class="start-quiz-btn replaceable" type="button" role="button" autofocus>Let's Do This!</button>
     </div>
   </main>
+
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="htmlVars.js"></script>
   <script src="index.js"></script>
+  <script src="data.js"></script>
+  <script src="htmlVars.js"></script>
+
+
 </body>
 
 </html>
-
-
-<!-- <form role="form" action="#" id='quiz-form'>
-  <button class="start-quiz-btn " type="button" role="button" autofocus>Let's Do This!</button>
-</form> -->
